<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.vaadin</groupId>
        <artifactId>vaadin-parent</artifactId>
        <version>3.0.0</version>
    </parent>

    <name>SSO Kit</name>

    <artifactId>sso-kit</artifactId>
    <version>4.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <licenses>
        <license>
          <name>Vaadin Commercial License and Service Terms</name>
          <url>https://vaadin.com/commercial-license-and-service-terms</url>
        </license>
    </licenses>

    <modules>
        <module>sso-kit-core</module>
        <module>sso-kit-starter</module>
        <module>sso-kit-keycloak</module>
    </modules>

    <properties>
        <flow.version>25.0-SNAPSHOT</flow.version>
        <hilla.version>25.0-SNAPSHOT</hilla.version>
        <vaadin.license.checker.version>2.1.1</vaadin.license.checker.version>

        <maven.compiler.release>21</maven.compiler.release>
        <maven.compiler.source>${maven.compiler.release}</maven.compiler.source>
        <maven.compiler.target>${maven.compiler.release}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <spring.boot.version>4.0.0-RC1</spring.boot.version>
        <maven.jar.version>3.4.2</maven.jar.version>
        <maven.source.version>3.3.1</maven.source.version>
        <maven.javadoc.version>3.12.0</maven.javadoc.version>
        <maven.surefire.version>3.5.4</maven.surefire.version>
        <maven.formatter.version>2.29.0</maven.formatter.version>
    </properties>

    <repositories>
        <repository>
            <id>vaadin-prereleases</id>
            <url>https://maven.vaadin.com/vaadin-prereleases/</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>vaadin-prereleases</id>
            <url>https://maven.vaadin.com/vaadin-prereleases/</url>
        </pluginRepository>
    </pluginRepositories>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>com.vaadin</groupId>
                <artifactId>vaadin-spring</artifactId>
                <version>${flow.version}</version>
            </dependency>
            <dependency>
                <groupId>com.vaadin</groupId>
                <artifactId>hilla-endpoint</artifactId>
                <version>${hilla.version}</version>
            </dependency>
            <dependency>
                <groupId>com.vaadin</groupId>
                <artifactId>license-checker</artifactId>
                <version>${vaadin.license.checker.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${maven.source.version}</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${maven.javadoc.version}</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <quiet>true</quiet>
                    <doclint>none</doclint>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.version}</version>
            </plugin>

            <plugin>
                <groupId>net.revelc.code.formatter</groupId>
                <artifactId>formatter-maven-plugin</artifactId>
                <version>${maven.formatter.version}</version>
                <configuration>
                    <configFile>https://raw.githubusercontent.com/vaadin/flow/master/eclipse/VaadinJavaConventions.xml</configFile>
                    <skipHtmlFormatting>true</skipHtmlFormatting>
                    <lineEnding>LF</lineEnding>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>demo</id>
            <activation>
                <property>
                    <name>!release</name>
                </property>
            </activation>
            <modules>
                <module>sso-kit-demo</module>
            </modules>
        </profile>
        <profile>
            <id>hilla</id>
            <activation>
                <property>
                    <name>!skipHilla</name>
                </property>
            </activation>
            <modules>
                <module>sso-kit-starter-hilla</module>
            </modules>
        </profile>
    </profiles>

</project>
